<resources>
    <string name="app_name">CaptureNotes</string>
    <string name="encoding">UTF-8</string>
    <string name="picture_notes_header">Capture new notes from a Picture</string>
    <string name="audio_notes_header">Capture new notes from a Recording</string>
    <string name="old_notes_header">Review old notes</string>
    <string name="default_note_title">Untitled Note</string>
    <string name="note_title_hint">Note title goes here</string>
    <string name="note_body_hint">The recognized words will go here</string>
    <string name="edit_note_content_hint">Note content goes here</string>
    <string name="note_title">Note Title:</string>
    <string name="edit_note_content_description">Note Content:</string>
    <string name="note_save_button">Save</string>
    <string name="notes_list_header">Previously Captured Notes</string>
    <string name="notes_row_date_header">Created on:</string>
    <string name="use_camera">Capture notes with Camera</string>
    <string name="open_gallery">Capture notes in an existing picture</string>
    <string name="save_note">Save Note</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="save_in_app">Save only in App</string>
    <string name="save_in_google_docs">Save in Google Docs</string>
    <string name="sync_with_google_docs">Sync with Google Docs</string>
    <string name="add_note">Add Note</string>
    <string name="settings">Settings</string>
    <string name="google_account">Logged in as:</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_location_header">Save Location:</string>
    <string name="change_save_location">Change</string>
    <string name="save_location_google_docs">Google Docs</string>
    <string name="save_location_app_only">App Only</string>
    <string name="notes_created">Notes Created:</string>
    <string name="app_version_header">App Version:</string>
    <string name="privacy_policy_header">Privacy Policy</string>
    <string name="support_header">Support</string>
    <string name="audio_button_description">A picture of a microphone</string>
    <string name="image_button_description">A picture of a camera.</string>
    <string name="notes_button_description">A picture of a note.</string>
    <string name="notes_list_row_date_hint">Date Goes Here</string>
    <string name="notes_list_row_title_hint">Title Goes Here</string>
</resources>
